--- a/src/main/webapp/error/404.html
+++ b/src/main/webapp/error/404.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>404 Error</title>
-</head>
-<body>
+<div>
 [STATUS CODE :: 404] this is test page
-</body>
-</html>
+</div>
